# Ghostline-Studio

./: AGENTIC.md  AGENTS.md  FEATURES.md  README.md  conftest.py  ghostline-studio.spec  install.sh  installer-linux.sh  installer-windows.iss  pyproject.toml  start.py
.github/: RELEASE_PROCESS.md
.github/workflows/: auto-release.yml  release-on-commit.yml  release.yml  tests.yml
docs/: INTELLISENSE.md  overview.md  plugins.md
docs/architecture/: ai_pipeline.md  crdt_engine.md  debugger_adapter_protocol.md  lsp_chains.md  plugin_system_v1.md
ghostline/: __main__.py  app.py  main.py
ghostline/agents/: __init__.py  agent_manager.py  analysis_agent.py  base_agent.py  refactor_agent.py  verification_agent.py
ghostline/ai/: __init__.py  agentic_client.py  ai_chat_panel.py  ai_client.py  ai_commands.py  ai_inline.py  analysis_service.py  architecture_assistant.py  chat_history_manager.py  command_adapter.py  context_engine.py  creator_easter_egg.py  doc_generator.py  events.py  maintenance_daemon.py  model_registry.py  navigation_assistant.py  planner.py  prompt_builder.py  refactor_pipeline.py  workspace_memory.py
ghostline/collab/: crdt_engine.py  presence_panel.py  session_manager.py  shared_workspace.py  transport.py
ghostline/core/: account.py  cache.py  config.py  dependency_installer.py  dependency_worker.py  diagnostics.py  events.py  logging.py  resources.py  self_healing.py  theme.py  threads.py  update_checker.py  update_installer.py  urls.py  usage_stats.py
ghostline/debugger/: breakpoints.py  configuration.py  debugger_manager.py  debugger_panel.py
ghostline/editor/: folding.py  (+3 more)
tests/: _qt_compat.py  conftest.py  test_ai_client.py  test_ast_integrity.py  test_chat_history.py  test_command_palette_easter_egg.py  test_core_components.py  test_core_threads.py  test_intellisense.py  test_model_registry.py  test_semantic_graph.py  test_semantic_index_manager.py  test_semantic_index_manager_extended.py  test_testing_integration.py  test_tool_executor.py
(+113 files in other folders)
