[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostline"
version = "0.1.0"
description = "Ghostline Studio - An advanced code editor with AI integration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Cowboy Daniel", email = "contact@cowboydaniel.dev"}
]
keywords = ["editor", "ai", "python", "development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
]

dependencies = [
    "PySide6>=6.5.0",
    "PyYAML>=6.0",
    "httpx>=0.24.0",
    "openai>=1.0.0",
    "platformdirs>=3.0.0",
    "psutil>=5.9.0",
    "shiboken6>=6.5.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/cowboydaniel/Ghostline-Studio"
Repository = "https://github.com/cowboydaniel/Ghostline-Studio.git"
Issues = "https://github.com/cowboydaniel/Ghostline-Studio/issues"
Documentation = "https://github.com/cowboydaniel/Ghostline-Studio#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["ghostline*"]

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313', 'py314']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I"]
ignore = ["E501", "W503"]
